--- a/index.html
+++ b/index.html
@@ -6,47 +6,100 @@
     <title>Tea Cozy</title>
   </head>
   <body>
-    Tea Cozy
-    mission
-    Featured Tea
-    Locations
 
-    Our Mission
-    Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
+<!-------------------------header---------------------->
 
-    Tea of the Month
-    What's Steeping at The Tea Cozy?
+    <header>
+      <div class="logo">
+        <img src="./resources/img-tea-cozy-logo.png" alt="logo">
+      </div>
+      <nav>
+        <span class="link">Mission</span>
+        <span class="link">Featured Tea</span>
+        <span class="link">Locations</span>
+      </nav>
 
-    Fall Berry Blitz Tea
-    Spiced Rum Tea
-    Seasonal Donuts
-    Myrtle Ave Tea
-    Bedford Bizarre Tea
+    </header>
 
-    Locations
+<div class="main">
+<!---------------mission------------------------->
 
-    Downtown
-      384 West 4th St
-      Suite 108
-      Portland, Maine
+  <div class="mission">
+    <div class="mission-text">
+      <h2>Our Mission</h2>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
+  </div>
 
-    East Bayside
-      3433 Phisherman's Avenue
-      (Northwest Corner)
-      Portland, Maine
+<!------------------tea of the month---------------->
 
-    Oakdale
-      515 Crescent Avenue
-      Second Floor
-      Portland, Maine
+    <h2>Tea of the Month</h2>
+    <h4>What's Steeping at The Tea Cozy?</h4>
 
+  <div class="month">
+    <div class="tea">
+      <img src="./resources/img-berryblitz.jpg" alt="berry blitz">
+      <h4>Fall Berry Blitz Tea</h4>
+    </div>
+    <div class="tea">
+      <img src="./resources/img-spiced-rum.jpg" alt="spiced rum">
+      <h4>Spiced Rum Tea</h4>
+    </div>
+    <div class="tea">
+      <img src="./resources/img-donut.jpg" alt="donut">
+      <h4>Seasonal Donuts</h4>
+    </div>
+    <div class="tea">
+      <img src="./resources/img-myrtle-ave.jpg" alt="myrtle">
+      <h4>Myrtle Ave Tea</h4>
+    </div>
+    <div class="tea">
+      <img src="./resources/img-bedford-bizarre.jpg" alt="bedford bizarre">
+      <h4>Bedford Bizarre Tea</h4>
+    </div>
+  </div>
+<!----------------locations---------------------->
 
-  The Tea Cozy
-    contact@theteacozy.com
-    917-555-8904
+  <div class="locations">
 
-copyright The Tea Cozy 2017
+    <div class="title">
+    <h2>Locations</h2>
+    </div>
 
+    <div class="boxes">
+    <h3>Downtown</h3>
+      <p>384 West 4th St</p>
+      <p>Suite 108</p>
+      <p>Portland, Maine</p>
+    </div>
+    <div class="boxes">
+    <h3>East Bayside</h3>
+      <p>3433 Phisherman's Avenue</p>
+      <p>(Northwest Corner)</p>
+      <p>Portland, Maine</p>
+    </div>
+    <div class="boxes">
+    <h3>Oakdale</h3>
+      <p>515 Crescent Avenue</p>
+      <p>Second Floor</p>
+      <p>Portland, Maine</p>
+    </div>
+  </div>
 
+<!-------------contact------------------>
+
+    <div class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+
+<!-----------------------footer--------------->
+
+<footer>
+<h5>copyright The Tea Cozy 2017</h5>
+</footer>
+
+</div>
   </body>
 </html>
