--- a/index.html
+++ b/index.html
@@ -9,97 +9,100 @@
 
 <!-------------------------header---------------------->
 
-    <header>
-      <div class="logo">
-        <img src="./resources/img-tea-cozy-logo.png" alt="logo">
+        <header>
+          <div class="logo">
+            <img src="./resources/img-tea-cozy-logo.png" alt="logo">
+          </div>
+          <nav>
+            <span class="link"><a href="#mission">Mission</a></span>
+            <span class="link"><a href="#month">Featured Tea</a></span>
+            <span class="link"><a href="#locations">Locations</a></span>
+          </nav>
+
+        </header>
+
+    <div class="main">
+    <!---------------mission------------------------->
+      <div id="mission"></div>
+      <div class="mission">
+
+        <div class="mission-text">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
       </div>
-      <nav>
-        <span class="link">Mission</span>
-        <span class="link">Featured Tea</span>
-        <span class="link">Locations</span>
-      </nav>
 
-    </header>
+    <!------------------tea of the month---------------->
+    <div id="month"></div>
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
 
-<div class="main">
-<!---------------mission------------------------->
 
-  <div class="mission">
-    <div class="mission-text">
-      <h2>Our Mission</h2>
-      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-    </div>
-  </div>
-
-<!------------------tea of the month---------------->
-
-    <h2>Tea of the Month</h2>
-    <h4>What's Steeping at The Tea Cozy?</h4>
-
-  <div class="month">
-    <div class="tea">
-      <img src="./resources/img-berryblitz.jpg" alt="berry blitz">
-      <h4>Fall Berry Blitz Tea</h4>
-    </div>
-    <div class="tea">
-      <img src="./resources/img-spiced-rum.jpg" alt="spiced rum">
-      <h4>Spiced Rum Tea</h4>
-    </div>
-    <div class="tea">
-      <img src="./resources/img-donut.jpg" alt="donut">
-      <h4>Seasonal Donuts</h4>
-    </div>
-    <div class="tea">
-      <img src="./resources/img-myrtle-ave.jpg" alt="myrtle">
-      <h4>Myrtle Ave Tea</h4>
-    </div>
-    <div class="tea">
-      <img src="./resources/img-bedford-bizarre.jpg" alt="bedford bizarre">
-      <h4>Bedford Bizarre Tea</h4>
-    </div>
-  </div>
+      <div class="month">
+        <div class="tea">
+          <img src="./resources/img-berryblitz.jpg" alt="berry blitz">
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <div class="tea">
+          <img src="./resources/img-spiced-rum.jpg" alt="spiced rum">
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="tea">
+          <img src="./resources/img-donut.jpg" alt="donut">
+          <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="tea">
+          <img src="./resources/img-myrtle-ave.jpg" alt="myrtle">
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="tea">
+          <img src="./resources/img-bedford-bizarre.jpg" alt="bedford bizarre">
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
+      </div>
 <!----------------locations---------------------->
 
-  <div class="locations">
+      <div class="locations">
+        <div id="locations"></div>
+        <div class="title">
+        <h2>Locations</h2>
+        </div>
+        <section>
+        <div class="boxes">
+        <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="boxes">
+        <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="boxes">
+        <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>
+        </section>
+      </div>
 
-    <div class="title">
-    <h2>Locations</h2>
+    <!-------------contact------------------>
+
+        <div class="contact">
+          <h2>The Tea Cozy</h2>
+          <h5>contact@theteacozy.com</h5>
+          <h5>917-555-8904</h5>
+        </div>
+
+    <!-----------------------footer--------------->
+
+    <footer>
+    <h5>copyright The Tea Cozy 2017</h5>
+    </footer>
+
     </div>
-
-    <div class="boxes">
-    <h3>Downtown</h3>
-      <p>384 West 4th St</p>
-      <p>Suite 108</p>
-      <p>Portland, Maine</p>
-    </div>
-    <div class="boxes">
-    <h3>East Bayside</h3>
-      <p>3433 Phisherman's Avenue</p>
-      <p>(Northwest Corner)</p>
-      <p>Portland, Maine</p>
-    </div>
-    <div class="boxes">
-    <h3>Oakdale</h3>
-      <p>515 Crescent Avenue</p>
-      <p>Second Floor</p>
-      <p>Portland, Maine</p>
-    </div>
-  </div>
-
-<!-------------contact------------------>
-
-    <div class="contact">
-      <h2>The Tea Cozy</h2>
-      <h5>contact@theteacozy.com</h5>
-      <h5>917-555-8904</h5>
-    </div>
-
-<!-----------------------footer--------------->
-
-<footer>
-<h5>copyright The Tea Cozy 2017</h5>
-</footer>
-
-</div>
   </body>
 </html>
